--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <hr class="divider large top">
+  <div class="color">
   <header>
     <h1>🍰 Kawaii Bites 🍰</h1>
   </header>
@@ -29,6 +30,7 @@
 <div class="item">☕ Hot chocolate </div><div class="cost">$4.00</div>
 </section>
 </body>  
+  </div>
 <hr class="divider large bottom">
   <footer>
     <p>© 2025 Kawaii Bites – Made with ♥ by [Your Name]</p>
