--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <hr class="divider large top">
   <header>
-    <h1>🍰 Kawaii Bites 🍰</h1>
+    <h1>🍰 Kawaii Bites </h1>
   </header>
   <hr class="divider medium">
 <body>
