--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <hr class="divider large top">
+<div class="container">
+  
   <header>
-    <h1>🍰 Kawaii Bites </h1>
+    <div class="logo">
+    <h1>Kawaii Bites</h1>
+    </div>
   </header>
   <hr class="divider medium">
 <body>
@@ -28,10 +32,13 @@
 <div class="item">🍓 Strawberry Smoothie</div><div class="cost">$5.25</div>
 <div class="item">☕ Hot chocolate </div><div class="cost">$4.00</div>
 </section>
+<hr class="divider medium">
 </body>  
+</div>
 <hr class="divider large bottom">
   <footer>
     <p>© 2025 Kawaii Bites – Made with ♥ by [Your Name]</p>
   </footer>
 </body>
 </html>
+
